[gd_scene load_steps=7 format=3 uid="uid://dvbn3rcl3t7nj"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_0wb8q"]
[ext_resource type="PackedScene" uid="uid://dqj1sk734rdqt" path="res://scenes/laser/laser.tscn" id="2_4uukq"]
[ext_resource type="Texture2D" uid="uid://3p2gkwku7ler" path="res://assets/PNG/playerShip1_blue.png" id="2_ji0ch"]
[ext_resource type="AudioStream" uid="uid://cvc14jisl235r" path="res://assets/Bonus/sfx_laser1.ogg" id="4_r5fvx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3apgq"]
radius = 49.2544

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cadpl"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:attack_interval")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:bullet_line")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[node name="Player" type="Area2D" groups=["player"]]
position = Vector2(287, 892)
script = ExtResource("1_0wb8q")
laser_tscn = ExtResource("2_4uukq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ji0ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_3apgq")

[node name="fireAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_r5fvx")

[node name="loseAudio" type="AudioStreamPlayer2D" parent="."]

[node name="AttackInterval" type="Timer" parent="."]
autostart = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_cadpl")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackInterval" to="." method="attack"]
